Bug 365191 - vCard4 must use LABEL ADR-parameter, not LABEL field
Summary: vCard4 must use LABEL ADR-parameter, not LABEL field
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-07 11:33 UTC by Erik Quaeghebeur
Modified: 2016-07-09 17:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2016-07-07 11:33:46 UTC
vCard4 export uses a LABEL field as in vCard, but it must use a LABEL parameter to the corresponding ADR field: see https://tools.ietf.org/html/rfc6350#section-6.3.1

Reproducible: Always
Comment 1 Laurent Montel 2016-07-08 13:35:30 UTC
Could you provide me a example please ?
Comment 2 Laurent Montel 2016-07-08 21:20:46 UTC
Git commit 0ddebb9c418f9197676b4ed7db1b41ae08eae83b by Montel Laurent.
Committed on 08/07/2016 at 21:20.
Pushed by mlaurent into branch 'master'.

Fix Bug 365191 - vCard4 must use LABEL ADR-parameter, not LABEL field

FIXED-IN: 5.3

M  +72   -0    autotests/addresstest.cpp
M  +2    -0    autotests/addresstest.h
M  +15   -9    src/vcardtool.cpp

http://commits.kde.org/kcontacts/0ddebb9c418f9197676b4ed7db1b41ae08eae83b
Comment 3 Erik Quaeghebeur 2016-07-08 22:03:59 UTC
(In reply to Laurent Montel from comment #1)
> Could you provide me a example please ?

(In reply to Laurent Montel from comment #2)
> Git commit 0ddebb9c418f9197676b4ed7db1b41ae08eae83b by Montel Laurent.
> Committed on 08/07/2016 at 21:20.
> Pushed by mlaurent into branch 'master'.
> 
> Fix Bug 365191 - vCard4 must use LABEL ADR-parameter, not LABEL field
> 
> FIXED-IN: 5.3
> 
> M  +72   -0    autotests/addresstest.cpp

I assume that you don't need an example anymore? (Sorry for not providing one, I assumed the one in the RFC section I linked would be enough.)
Comment 4 Laurent Montel 2016-07-09 17:58:54 UTC
Yep I used rfc to implement it.
It works fine; I created an unittest for it