Fix Bug 365191 - vCard4 must use LABEL ADR-parameter, not LABEL field

FIXED-IN: 5.3
BUG: 365191